examples/co2/physnet_train/logs/quick_60470641_3.err
ERROR:2025-10-31 20:37:17,174:jax._src.xla_bridge:473: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 471, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 328, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 285, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: CUDA_ERROR_NOT_INITIALIZED
ERROR:jax._src.xla_bridge:Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 471, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 328, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 285, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: CUDA_ERROR_NOT_INITIALIZED
WARNING:2025-10-31 20:37:17,181:jax._src.xla_bridge:850: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
WARNING:jax._src.xla_bridge:An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
usage: trainer.py [-h] --train TRAIN --valid VALID [--features FEATURES]
                  [--max-degree MAX_DEGREE] [--num-iterations NUM_ITERATIONS]
                  [--num-basis-functions NUM_BASIS_FUNCTIONS]
                  [--cutoff CUTOFF] [--n-res N_RES] [--natoms NATOMS]
                  [--max-atomic-number MAX_ATOMIC_NUMBER]
                  [--total-charge TOTAL_CHARGE] [--batch-size BATCH_SIZE]
                  [--epochs EPOCHS] [--learning-rate LEARNING_RATE]
                  [--seed SEED] [--energy-weight ENERGY_WEIGHT]
                  [--forces-weight FORCES_WEIGHT]
                  [--dipole-weight DIPOLE_WEIGHT] [--restart] [--name NAME]
                  [--ckpt-dir CKPT_DIR] [--print-freq PRINT_FREQ]
                  [--no-tensorboard] [--save-best]
                  [--objective {valid_forces_mae,valid_energy_mae,valid_loss,train_forces_mae,train_energy_mae,train_loss}]
                  [--optimizer {adam,adamw,amsgrad}]
                  [--schedule {warmup,cosine_annealing,exponential,polynomial,cosine,warmup_cosine,constant}]
                  [--transform TRANSFORM] [--zbl] [--charges]
                  [--center-coordinates] [--normalize-energy]
                  [--energy-unit {eV,hartree,kcal/mol,kJ/mol}]
                  [--convert-energy-to {eV,hartree,kcal/mol,kJ/mol}]
                  [--subtract-atomic-energies]
                  [--atomic-energy-method {linear_regression,mean}]
                  [--scale-by-atoms] [--verbose]
trainer.py: error: unrecognized arguments: --no-energy-bias
